--- a/ZimbraOffline/WebRoot/zimbra/skins/twilight/desktop.css
+++ b/ZimbraOffline/WebRoot/zimbra/skins/twilight/desktop.css
@@ -17,293 +17,7 @@
 
 /* Offline-specific styles */
 
-BODY {
-	background: #808080 url("img/bg.png") repeat-x top left;
-	padding-top: 40px;
-}
-
-P, TH, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON, A {
-	font-family: Tahoma, Arial, Helvetica, sans-serif;
-}
-
-FORM {
-	margin: 0px;
-	padding: 0px;
-}
-
-A:link, A:active, A:visited {
-	color: darkblue;
-	text-decoration: none;
-}
-
-A:hover {
-	text-decoration: underline;
-}
-
-.ZPanel {
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	text-align: center;
-	width: 720px;
-	background: #3e100f url("img/setup-bkgd-full.gif") no-repeat top left;
-	padding: 20px 40px;
-}
-
-.ZPanelLogo {
-	background: url("img/LoginBanner.png") no-repeat top left;
-	width: 195px;
-	height: 10px;
-	padding: 20px 0px;
-}
-
-.ZPanelTitle {
-	color: #cccccc;
-	padding-top: 2px;
-	font-size: 18px;
-}
-
-.ZPanelInfoOuter {
-	background-color: #dddddd;
-	padding: 10px;
-}
-
-.ZPanelInfoInner {
-	background-color: #ffffff;
-	padding: 10px;
-}
-
-.ZWelcome {
-	font-size: 14px;
-	color: #4a4a4a;
-}
-
-.ZWelcome li {
-	margin-bottom: 12px;
-}
-
-.ZWelcomeInfo {
-	font-size: 12px;
-	color: #666666;
-}
-
-.ZPanelButton {
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	background: #5ca334 url("img/button-bkgd.gif") repeat-x top left;
-	color: #eeeeee;
-	height: 28px;
-	font-size: 13px;
-	padding: 7px 20px 0px 20px;
-	cursor: pointer;
-}
-
-.ZCancel {
-	background: #7c7c7c url("img/button-bkgd-cancel.png") repeat-x top left;
-}
-
-.ZPanelBottom a {
-	color: #333333;
-	font-size: 12px;
-}
-
-.ZPanelTabInactive {
-	-moz-border-radius-topleft: 6px;
-	-moz-border-radius-topright: 6px;
-	-webkit-border-top-left-radius: 6px;
-	-webkit-border-top-right-radius: 6px;
-	background: #6a6a6a url("img/tab_inactive.png") repeat-x top left;
-	color: #6b6b6b;
-	height: 25px;
-	font-size: 13px;
-	padding: 7px 20px 0px 20px;
-	cursor: pointer;
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-.ZPanelTabActive {
-	-moz-border-radius-topleft: 6px;
-	-moz-border-radius-topright: 6px;
-	-webkit-border-top-left-radius: 6px;
-	-webkit-border-top-right-radius: 6px;
-	background-color: #dddddd;
-	color: #444444;
-	height: 25px;
-	font-size: 13px;
-	padding: 7px 20px 0px 20px;
-	cursor: default;
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-.ZPanelFirstTab {
-	margin-left: 20px;
-}
-
-.ZPanelTab {
-	margin-left: 6px;
-}
-
-.ZInfo {
-	background-color: #ffffbe;
-	border: 1px solid #fff13f;
-	padding: 8px;
-	margin: 5px 5px 15px 5px;
-	font-size: 12px;
-	color: #444444;
-}
-
-.ZInfoError {
-	font-weight: bold;
-}
-
-.ZAccountGood {
-	background-color: #f1fee8;
-	border: 1px solid #d3fdba;
-	padding: 5px;
-}
-
-.ZAccountHeaderGood {
-	border-bottom: 1px solid #d4ecc8;
-}
-
-.ZAccountBad {
-	background-color: #ffefef;
-	border: 1px solid #ffd5d4;
-	padding: 5px;
-}
-
-.ZAccountHeaderBad {
-	border-bottom: 1px solid #f4c2c0;
-}
-
-.ZAccountActions a {
-	color: blue;
-	font-size: 11px;
-	white-space: nowrap;
-	text-decoration: underline;
-}
-.ZAccountName {
-	color: #444444;
-	font-size: 15px;
-}
-
-.ZAccountEmail {
-	color: #444444;
-	font-size: 12px;
-}
-
-.ZAccountStatus {
-	font-size: 11px;
-	font-weight: bold;
-	color: #444444;
-}
-
-.ZAccountLastSync {
-	font-size: 12px;
-	font-style: italic;
-	color: #999999;
-	padding-right: 10px;
-	white-space: nowrap;
-}
-
-.ZAccountError {
-	padding: 10px;
-	background-color: #ffd5d4;
-}
-
-.ZAccountErrorMessage {
-	font-weight: bold;
-	font-size: 11px;
-	color: #444444;
-}
-
-.ZAccountErrorDetails {
-	font-size: 10px;
-}
-
-#errorDetails {
-	display: none;
-	overflow: hidden;
-	font-size: 10px;
-	color: #444444;
-}
-
-.ZField {
-	width: 100%;
-	font-size: 16px;
-	color: #444444;
-	white-space: nowrap;
-}
-
-.ZFieldLabel, .ZFieldError {
-	color: #444444;
-	text-align: right;
-	white-space: nowrap;
-	width: 200px;
-}
-
-.ZFieldSubLabel, .ZFieldErrorSubLabel {
-	color: #444444;
-	text-align: right;
-	white-space: nowrap;
-}
-
-.ZFieldCertLabel {
-	color: #444444;
-	font-size: 11px;
-}
-
-.ZSyncLabel {
-	color: #7a7a7a;
-}
-
-.ZRadioLabel, .ZCheckboxLabel, .ZInputLabel {
-	color: #444444;
-	font-size: 14px;
-}
-
-.ZFieldError, .ZFieldErrorSubLabel {
-	color: #911510;
-}
-
-.ZSelect {
-	color: #444444;
-	font-size: 14px;
-}
-
-.ZAccountHelp {
-	font-size: 12px;
-	color: #444444;
-	padding-bottom: 10px;
-}
-
-.ZAccountWarning {
-	padding-top: 5px;
-}
-
-.ZSection {
-	color: #666666;
-	border-bottom: 1px solid #999999;
-	padding-top: 20px;
-	margin-bottom: 10px;
-	font-size: 14px;
-}
-
-.ZSubLink a {
-	color: #999999;
-	font-size: 14px;
-	text-decoration: underline;
-}
-
-.ZError {
-	background-color: #ffefef;
-	border: 1px solid #ffd5d4;
-	padding: 10px;
-	font-size: 14px;
-	margin-bottom: 10px;
-}
-
-.ZDot {
-	color: #444444;
-}
+/******************************************************************************/
+/* NOTE:
+/* Twilight skin is the default skin and takes its styles from /base2/desktop.css
+/******************************************************************************/
